<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Titulos -->
    <string name="app_name">Controle de Abastecimento</string>
    <string name="title_activity_cadastrar_abastecimento">ControleDeAbastecimento</string>

    <!-- Botoes -->
    <string name="cadastrar">Cadastrar</string>
    <string name="visualizar_dados">Visualizar Dados</string>
    <string name="totais">Totais</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>

    <!-- Dados -->
    <string name="data">Data</string>
    <string name="tipo_combustivel">Tipo de Combustível</string>
    <string name="combustivel">Comb.</string>
    <string name="litro">Litros</string>
    <string name="preco_litro">Preço do Litro</string>
    <string name="total">Total</string>
    <string name="posto">Posto</string>

    <!-- Array -->
    <array name="tipo_combustivel_lista">
        <item>Gasolina</item>
        <item>Etanol</item>
        <item>Disel</item>
    </array>

    <string name="title_activity_visualizar_abastecimento">VisualizarAbastecimento</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_total_abastecimento">TotalAbastecimento</string>

</resources>
