<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.lab2.controledeabastecimento.model.CadastrarAbastecimento"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:text="@string/cadastrar"
        android:textSize="32sp"
        android:textColor="@color/foreground"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:textSize="22sp"
        android:textColor="@color/foreground"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtData"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:background="@color/fundo_falso"
        android:textSize="25sp"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/litro"
        android:textSize="22sp"
        android:textColor="@color/foreground"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtLitro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginBottom="10sp"
        android:background="@color/texto_fundo"
        android:textSize="25sp"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preco_litro"
        android:textSize="22sp"
        android:textColor="@color/foreground"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPrecoLitro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:background="@color/texto_fundo"
        android:inputType="numberDecimal"
        android:textSize="25sp"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="22sp"
        android:textColor="@color/foreground"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtTotal"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:background="@color/fundo_falso"
        android:textSize="25sp"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipo_combustivel"
        android:textSize="22sp"
        android:textColor="@color/foreground"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/selectCombustivel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/tipo_combustivel_lista">

    </Spinner>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/posto"
        android:textSize="22sp"
        android:textColor="@color/foreground"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPosto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:background="@color/texto_fundo"
        android:textSize="25sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:background="@color/botao_fundo"
            android:textColor="@color/botao_texto"
            android:layout_marginRight="10sp"/>

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:textColor="@color/botao_texto"
            android:background="@color/botao_fundo"/>

    </LinearLayout>

</LinearLayout>
