<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaPrincipal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/foreground"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:background="@color/botao_fundo"
        android:text="@string/cadastrar"
        android:textColor="@color/botao_texto"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnVisualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:background="@color/botao_fundo"
        android:text="@string/visualizar_dados"
        android:textColor="@color/botao_texto"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:background="@color/botao_fundo"
        android:text="@string/totais"
        android:textColor="@color/botao_texto"
        android:textSize="24sp" />

</LinearLayout>

